Fixing missing error and false translation